--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "test": "grunt test",
     "start": "grunt"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tq1/br-tq1-helpers.git"
+  },
   "author": "Lucas Coelho <lucas.coelho@taqtile.com>",
   "license": "ISC",
   "dependencies": {
     "coffee-script": "1.9.1",
     "lodash": "2.2.1"
   },
-
   "devDependencies": {
     "grunt-env": "^0.4.2",
     "glob": "4.0.2",
