--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "2.2.1"
   },
   "devDependencies": {
+    "express": "4.0.0",
     "grunt-env": "^0.4.2",
     "glob": "4.0.2",
     "grunt": "0.4.2",
